# nifs3edit

./: CMakeLists.txt  README.md  konkurs.data  konkurs_opt.data  nifs3edit.c  zadanie7.data
